--- a/Klinik.Web/Views/MasterData/CreateOrEditUser.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditUser.cshtml
@@ -22,7 +22,7 @@
 					@Html.ValidationMessageFor(m => m.OrgID, "", new { @class = "text-danger" })
 				</div>
 			</div>
-			<div class="form-group">
+		   <div class="form-group">
 				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Role</label>
 				<div class="col-md-4">
 					@Html.DropDownListFor(p => p.RoleID, (IEnumerable<SelectListItem>)ViewBag.RoleList, new { @class = "form-control", @id = "ddlrole" })
@@ -32,7 +32,7 @@
 				<label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Employee</label>
 				<div class="col-md-4">
 					@Html.DropDownListFor(p => p.EmployeeID, (IEnumerable<SelectListItem>)ViewBag.Employees, new { @class = "form-control", @id = "ddlemployee" })
-					@Html.ValidationMessageFor(m => m.OrgID, "", new { @class = "text-danger" })
+					@Html.ValidationMessageFor(m => m.EmployeeID, "", new { @class = "text-danger" })
 				</div>
 			</div>
 			<div class="form-group">
