add privilege warehouse

--- a/Klinik.Web/Views/PurchaseOrder/CreateOrEditPurchaseOrder.cshtml
+++ b/Klinik.Web/Views/PurchaseOrder/CreateOrEditPurchaseOrder.cshtml
@@ -40,7 +40,7 @@
                 <div class="form-group">
                     <label class="col-md-4 control-label" for="inputDefault">Source</label>
                     <div class="col-md-6">
-                        <select id="namagudang" class="form-control"><option>@Model.sourcename</option></select>
+                        <select id="namagudang" class="form-control" disabled><option>@Model.sourcename</option></select>
                     </div>
                 </div>
             </div>
