--- a/Klinik.Web/Views/Reports/Top10DiseasesReport.cshtml
+++ b/Klinik.Web/Views/Reports/Top10DiseasesReport.cshtml
@@ -1,7 +1,68 @@
-﻿
+﻿@using Klinik.Common.Paging;
+@model Klinik.Entities.Reports.Top10DiseaseReportModel
 @{
     ViewBag.Title = "Top10DiseasesReport";
 }
 
-<h2>Top10DiseasesReport</h2>
+<div>
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active"><a href="#first" aria-controls="first" role="tab" data-toggle="tab">Tabular Report</a></li>
+        <li role="presentation"><a href="#second" aria-controls="second" role="tab" data-toggle="tab">Chart</a></li>
+    </ul>
+
+    <!-- Tab panes -->
+    <div class="tab-content">
+        <div role="tabpanel" class="tab-pane active" id="first">
+            <header class="panel-heading">
+                <h5 class="panel-title">
+                    @Klinik.Resources.UIMessages.Top10DiseasesReport
+                </h5>
+            </header>
+            <div class="panel-body">
+                <table class="table-striped">
+                    <thead>
+                        <tr>
+                            <th align="center">@Klinik.Resources.UIMessages.ICDCode</th>
+                            <th align="center">@Klinik.Resources.UIMessages.ClinicName</th>
+                            <th align="center">@Klinik.Resources.UIMessages.PatientName</th>
+                            <th align="center">@Klinik.Resources.UIMessages.FamilyRelationship</th>
+                            <th align="center">@Klinik.Resources.UIMessages.Age</th>
+                            <th align="center">@Klinik.Resources.UIMessages.Gender</th>
+                            <th align="center">@Klinik.Resources.UIMessages.Department</th>
+                            <th align="center">@Klinik.Resources.UIMessages.TransactionDate</th>
+                            <th align="center">@Klinik.Resources.UIMessages.Diagnose</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.DiseaseDataReports)
+                        {
+                        <tr>
+                            <td width="5%">@item.ICDCode</td>
+                            <td width="15%">@item.ClinicName</td>
+                            <td width="15%">@item.PatientName</td>
+                            <td width="10%">@item.FamName</td>
+                            <td width="5%" align="right">@item.Age.ToString()</td>
+                            <td width="5%" align="center">@item.Gender</td>
+                            <td width="10%" align="center">@item.Department</td>
+                            <td width="15%" align="right">@item.TransDate</td>
+                            <td width="20%" align="center">@item.Diagnose</td>
+                        </tr>
+                        }
+                    </tbody>
+                </table>
+                @*<div class="pager">
+                    @Html.Pager(Model.PageSize, Model.PageNumber, Model.TotalRecord)
+                </div>*@
+            </div>
+            <div class="panel-footer">
+                <button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.ExportToExcel</button>
+            </div>
+        </div>
+        <div role="tabpanel" class="tab-pane" id="second">
+
+        </div>
+    </div>
+
+</div>
 
