--- a/Klinik.Web/Views/Shared/_Layout.cshtml
+++ b/Klinik.Web/Views/Shared/_Layout.cshtml
@@ -3,53 +3,54 @@
 <!doctype html>
 <html class="fixed">
 <head>
-	<!-- Basic -->
-	<title>@Klinik.Resources.UIMessages.HomepageTitle</title>
-	<meta charset="UTF-8">
-	<meta name="keywords" content="Sistem Klinik Online" />
-	<meta name="description" content="Medical Management System">
-	<meta name="author" content="CV Mandiri">
+    <!-- Basic -->
+    <title>@Klinik.Resources.UIMessages.HomepageTitle</title>
+    <meta charset="UTF-8">
+    <meta name="keywords" content="Sistem Klinik Online" />
+    <meta name="description" content="Medical Management System">
+    <meta name="author" content="CV Mandiri">
 
-	<!-- Favicon -->
-	<link rel="icon" type="image/png" href="~/Content/images/favicon.ico" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="~/Content/images/favicon.ico" />
 
-	<!-- Mobile Metas -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-	<!-- Web Fonts  -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Shadows+Into+Light" rel="stylesheet" type="text/css">
+    <!-- Web Fonts  -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Shadows+Into+Light" rel="stylesheet" type="text/css">
 
-	<!-- Vendor CSS -->
-	<link href="~/Content/Octopus/assets/vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
-	<link href="~/Content/Octopus/assets/vendor/bootstrap-datepicker/css/datepicker3.css" rel="stylesheet" />
+    <!-- Vendor CSS -->
+    <link href="~/Content/Octopus/assets/vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/Octopus/assets/vendor/bootstrap-datepicker/css/datepicker3.css" rel="stylesheet" />
 
-	<link href="~/Content/Octopus/assets/vendor/jquery-ui/css/ui-lightness/jquery-ui-1.10.4.custom.css" rel="stylesheet" />
-	<link href="~/Content/Octopus/assets/vendor/bootstrap-multiselect/bootstrap-multiselect.css" rel="stylesheet" />
+    <link href="~/Content/Octopus/assets/vendor/jquery-ui/css/ui-lightness/jquery-ui-1.10.4.custom.css" rel="stylesheet" />
+    <link href="~/Content/Octopus/assets/vendor/bootstrap-multiselect/bootstrap-multiselect.css" rel="stylesheet" />
 
-	<!-- Specific Page Vendor CSS -->
-	@*<link rel="stylesheet" href="~/Content/Octopus/assets/vendor/select2/select2.css" />*@
-	<link href="~/Content/Login/vendor/select2/select2.min.css" rel="stylesheet" />
-	<link rel="stylesheet" href="~/Content/Octopus/assets/vendor/jquery-datatables-bs3/assets/css/datatables.css" />
-	<link rel="stylesheet" href="~/Content/Octopus/assets/vendor/magnific-popup/magnific-popup.css" />
-	<link rel="stylesheet" href="~/Content/Octopus/assets/vendor/pnotify/pnotify.custom.css" />
+    <!-- Specific Page Vendor CSS -->
+    @*<link rel="stylesheet" href="~/Content/Octopus/assets/vendor/select2/select2.css" />*@
+    <link href="~/Content/Login/vendor/select2/select2.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/Octopus/assets/vendor/jquery-datatables-bs3/assets/css/datatables.css" />
+    <link rel="stylesheet" href="~/Content/Octopus/assets/vendor/magnific-popup/magnific-popup.css" />
+    <link rel="stylesheet" href="~/Content/Octopus/assets/vendor/pnotify/pnotify.custom.css" />
 
-	<!-- Nuget CSS -->
-	<link href="~/Content/font-awesome.css" rel="stylesheet" />
-	<link href="~/Content/toastr.css" rel="stylesheet" />
-	<link href="~/Content/MvcDatalist/mvc-datalist.css" rel="stylesheet">
+    <!-- Nuget CSS -->
+    <link href="~/Content/font-awesome.css" rel="stylesheet" />
+    <link href="~/Content/toastr.css" rel="stylesheet" />
+    <link href="~/Content/MvcDatalist/mvc-datalist.css" rel="stylesheet">
 
-	<!-- Theme CSS -->
-	<link href="~/Content/Octopus/assets/stylesheets/theme.css" rel="stylesheet" />
-	<link href="~/Content/Octopus/assets/stylesheets/skins/default.css" rel="stylesheet" />
-	<link href="~/Content/Octopus/assets/stylesheets/theme-custom.css" rel="stylesheet" />
+    <!-- Theme CSS -->
+    <link href="~/Content/Octopus/assets/stylesheets/theme.css" rel="stylesheet" />
+    <link href="~/Content/Octopus/assets/stylesheets/skins/default.css" rel="stylesheet" />
+    <link href="~/Content/Octopus/assets/stylesheets/theme-custom.css" rel="stylesheet" />
 
-	<!-- Head Libraries -->
-	@RenderSection("pdfcode", required: false)
-	<script src="~/Scripts/jquery-3.0.0.js"></script>
-	<script src="~/Content/Octopus/assets/vendor/Modernizr/modernizr.js"></script>
-	<script src="~/Scripts/toastr.js"></script>
+    <!-- Head Libraries -->
+    @RenderSection("pdfcode", required: false)
+    <script src="~/Scripts/jquery-3.0.0.js"></script>
+    <script src="~/Content/Octopus/assets/vendor/Modernizr/modernizr.js"></script>
+    <script src="~/Scripts/toastr.js"></script>
+    <script src="~/Scripts/Highcharts-4.0.1/js/highcharts.js"></script>
 
-	@RenderSection("Styles", required: false)
+    @RenderSection("Styles", required: false)
 
 </head>
 <body>
