--- a/Klinik.Web/Views/MasterData/CreateOrEditLookUpCategory.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditLookUpCategory.cshtml
@@ -12,24 +12,10 @@
         </header>
         <div class="panel-body">
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.LookUpName</label>
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.TypeName</label>
                 <div class="col-md-4">
                     @Html.HiddenFor(x => x.Id)
-                    @Html.TextBoxFor(x => x.LookUpName, new { @class = "form-control", @id = "tbCode" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.LookUpCode</label>
-                <div class="col-md-4">
-                    @Html.HiddenFor(x => x.Id)
-                    @Html.TextBoxFor(x => x.LookUpCode, new { @class = "form-control", @id = "tbCode" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.LookUpContent</label>
-                <div class="col-md-4">
-                    @Html.HiddenFor(x => x.Id)
-                    @Html.TextBoxFor(x => x.LookUpContent, new { @class = "form-control", @id = "tbCode" })
+                    @Html.TextBoxFor(x => x.TypeName, new { @class = "form-control", @id = "tbCode" })
                 </div>
             </div>
         </div>
